--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
 *= require_tree .
 *= require_self
 */
-
+body {
+  margin: 100px;
+}
 
 .ng-letters {
   width: 50px;
@@ -23,10 +25,12 @@
   background-color: rgb(32, 144, 214);
   font-weight: bold;
   text-align: center;
-  margin: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   box-shadow: 0 2px 5px black;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 
@@ -34,4 +38,10 @@
   list-style: none;
   display: flex;
   justify-content: flex-start;
+  padding: 0px;
+}
+
+.results-text {
+  display: flex;
+  /* justify-content: center; */
 }
