--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -7,3 +7,11 @@
     </li>
   <% end %>
 </ul>
+
+<form action="/score" method="POST" data-turbo="false">
+  <label for="word">Write down the longest word you can make from the letters above!</label>
+  <input type="text" placeholder="Insert your longest word here!" name="word">
+  <input type="submit">
+  <%= hidden_field_tag :letters, @letters %>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+</form>
